--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: pass_vault
 description: "My password vault"
 publish_to: "none"
 
-version: 1.0.0+1
+version: 1.0.5+5
 
 environment:
   sdk: ^3.7.0
@@ -15,15 +15,16 @@ dependencies:
   json_annotation: ^4.9.0
   local_auth: ^2.3.0
   provider: ^6.1.5+1
+  webview_flutter: ^4.9.1
   uuid: ^4.5.1
 
 dev_dependencies:
-  build_runner: ^2.7.0
+  build_runner: ^2.9.0
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^3.2.0
-  json_serializable: ^6.10.0
+  freezed: ^3.2.3
+  json_serializable: ^6.11.1
 
 flutter:
   uses-material-design: true
