--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cryptography: ^2.9.0
   flutter_secure_storage: ^9.2.4
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
-  local_auth: ^2.3.0
+  local_auth: ^3.0.0
   provider: ^6.1.5+1
-  webview_flutter: ^4.9.1
+  webview_flutter: ^4.13.0
   uuid: ^4.5.1
 
 dev_dependencies:
