--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: "none"
 version: 1.0.5+5
 
 environment:
-  sdk: ^3.7.0
+  sdk: ^3.10.0
 
 dependencies:
   flutter:
@@ -15,9 +15,11 @@ dependencies:
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   local_auth: ^3.0.0
-  provider: ^6.1.5+1
   webview_flutter: ^4.13.0
   uuid: ^4.5.1
+  flutter_bloc: ^9.1.1
+  flutter_lazy_indexed_stack: ^0.1.0
+  supabase_flutter: ^2.5.8
 
 dev_dependencies:
   build_runner: ^2.9.0
